@@ -278,10 +278,9 @@ import org.springframework.transaction.annotation.Transactional;
   @Test
    void updateScenario1a() {
     //given
-    version1 = lineVersionRepository.save(version1);
+    version1 = lineVersionRepository.saveAndFlush(version1);
     LineVersion editedVersion = version1Builder().build();
-    editedVersion.setDescription("Description <changed>");
-    editedVersion.setComment("Scenario 1");
+    editedVersion.setNumber("Des>");
     editedVersion.setValidFrom(LocalDate.of(2020, 1, 1));
     editedVersion.setValidTo(LocalDate.of(2020, 1, 1));
     editedVersion.setVersion(version1.getVersion());
@@ -296,7 +295,7 @@ import org.springframework.transaction.annotation.Transactional;
     assertThat(result).isNotNull().hasSize(2);
 
     // Version 1
-    LineVersion firstTemporalVersion = result.get(0);
+    LineVersion firstTemporalVersion = result.getFirst();
     assertThat(firstTemporalVersion.getValidFrom()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getValidTo()).isEqualTo(LocalDate.of(2020, 1, 1));
     assertThat(firstTemporalVersion.getStatus()).isEqualTo(Status.DRAFT);
